@@ -2,32 +2,175 @@
 <!DOCTYPE displayplugin SYSTEM "../../../dtd/displayplugin.dtd">
 
 <displayplugin x="0" y="0" width="100%" height="100%" fadetime="0">
-
+	
+	<!-- Available Variables message:
+	{displaymessage}			bool: message displayed?
+    {message}                   string: message to display
+    -->
+	<viewelement name="message">
+    </viewelement>
+	
+	<!-- Tokens available in background
+		{hasfanart}	bool
+		{hascover}	bool
+		{fanartpath} string/path
+		{coverpath}	string/path
+    -->
 	<viewelement name="background">
 		<area x="0" y="0" width="100%" height="100%" layer="1">
 			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNG" />
-			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />           
+			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />    
 		</area>
 		<area x="0" y="0" width="100%" height="100%" layer="2">
-			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuDefault" />           
+			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuDefault" />
 		</area>
-		<area x="0" y="0" width="100%" height="11%" layer="3">
-			<drawimage  x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />           
+		<area x="0" y="0" width="100%" height="11%" layer="2">
+			<drawimage x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />           
 		</area>
+    </viewelement>
+	
+	<!-- Tokens available in info
+	{title}                 	string, Name of the element
+	{viewgroup}					int: {UNDEF = 0, MOVIE = 1, SHOW = 2, SEASON = 3, EPISODE = 4, MUSIC, PHOTO};
+		
+	Following tokens are avaliable if the item is a directory or video
+	{year}						Year of production
+	{hasthumb}					bool
+		{thumb}					string, Image/Cover
+	{hasart}					bool
+		{art}					string, Fanart
+			
+	If the item is a video following tokens are avaliable
+	The item is a video if one of the following tokens are set: {ismovie}, {isepisode} {isclip}
+	{contentrating}		string, FSK, PEGI -> eg. de/16
+	{rating}			int, starrating 0.0 - 10.0 multiplied by 10 -> 0 - 100
+	{ratingstring}		string, rating formated as double %.1f
+	{viewoffset}		int, minutes, last viewed position
+	{viewoffsetpercent} last viewed position as percent value 0 - 100
+	{duration}			int, minutes, total duration
+	{orginaltitle}		original title
+	{summary}			Description, plot, summary
+	{studio}			Studio
+	{viewCount}			Unseen if less than 1
+	
+	{originallyAvailableYear}		Year of release/first aired
+	{originallyAvailableMonth}	Month of release/first aired
+	{originallyAvailableDay}		Day of release/first aired
+	
+	{roles[actor]}		looptoken
+	{genres[genre]}	looptoken
+	
+	{videoResolution}	string (sd, 720, 1080)
+	{bitrate}			int
+	{width}				int
+	{height}			int
+	{audioChannels}		int
+	{aspectRatio}		string (1.33, 1.78, 1.85, 2.35)
+	{audioCodec}		string (aac, mp3, mp2, ac3, dca) hint: dca==DTS
+	{videoCodec}		string (mpeg4, msmpeg4, h264)
+	{container}			string (avi, mp4, mkv)
+	{videoFrameRate}	string (PAL, NTSC, 24p)
+	
+	{ismovie}
+	{isepisode}
+		{seriestitle}		Title of the series/show
+		{season}			int, Season
+		{episode}			int, Episode, season based
+		{hasbanner}		bool, Bannerstyle
+			{banner}		Image path
+		{hasseriesthumb}	bool, seriesthumb (seasoncover, seriescover)
+			{seriesthumb}	Image path
+    
+	-->
+	<viewelement name="info">
+		<area x="0" y="0" width="100%" height="100%" layer="3">
+			<drawimage name="art" condition="{hasart}" x="0" width="{areawidth}" height="{areaheight}" imagetype="image" path="{art}" />
+		</area>
+		<area condition="{hasart}" x="0" y="0" width="100%" height="100%" layer="4">
+			<fill color="{clrPlexFill}" />
+		</area>
+		<area x="2%" y="16%" width="25%" height="75%" layer="5">
+			<drawimage name="thumb" condition="{hasthumb}" imagetype="image" path="{thumb}" align="center" x="0" y="0" width="{areawidth}" height="{areawidth}*480/320" />
+		</area>
+		<area x="30%" y="18%" width="65%" height="7%" layer="5">
+			<drawtext x="1%" y="0" width="80%" font="{regular}" fontsize="80%" color="{clrLightGray}" text="{title}" />
+			<drawtext x="1%" y="0" align="right" width="80%" font="{regular}" fontsize="80%" color="{clrDarkGray}" text="{year}" />
+		</area>
+		<area x="30%" y="26%" width="65%" height="1%" layer="5">
+			<drawrectangle x="0" y="0" width="{areawidth}" height="30%" color="{clrRecMenuBorderTop}" />
+			<drawrectangle x="0" y="0" width="74%" height="30%" color="{clrHigh}" />
+		</area>
+		<area x="85%" y="28%" width="10%" height="4%" layer="5">
+			<drawtext x="1%" y="0" align="right" width="80%" font="{regular}" fontsize="84%" color="{clrLightGray}" text="{duration}min" />
+		</area>
+		<area x="30%" y="28%" width="50%" height="4%" layer="5">
+			<loop name="genres" x="0" y="0" orientation="horizontal" width="{areawidth}" height="4%" rowheight="{areaheight}" >
+				<drawtext x="0" y="0" width="100%" font="{regular}" fontsize="60%" color="{clrLightGray}" text="{genres[genre]} " />
+			</loop>
+		</area>
+		<area x="30%" y="32%" width="65%" height="4%" layer="5">
+			<loop name="roles" x="0" y="0" orientation="horizontal" width="{areawidth}" height="4%" rowheight="{areaheight}" >
+				<drawtext x="0" y="0" width="100%" font="{regular}" fontsize="60%" color="{clrLightGray}" text="{roles[actor]} " />
+			</loop>
+		</area>
+		<areascroll orientation="vertical" mode="forthandback" delay="1000" scrollspeed="medium" x="30%" y="58%" width="65%" height="34%" layer="5">
+			<drawtextbox condition="isset{summary}" x="0" y="0" width="100%" font="{regular}" fontsize="8%" color="{clrLightGray}" text="{summary}" />
+		</areascroll>
 	</viewelement>
-
-	<viewelement name="header">
-		<area x="2%" y="1%" width="100%" height="9%" layer="4">
-			<drawtext x="0%" y="0%" width="100%" font="{light}" fontsize="45%" color="{clrLightGray}" text="Plex for VDR" />
-			<drawtext condition="{istab1active}" x="0%" y="50%" width="100%" font="{light}" fontsize="45%" color="{clrLightGray}" text="{tab1name}" />
-			<drawtext condition="{istab2active}" x="0%" y="50%" width="100%" font="{light}" fontsize="45%" color="{clrLightGray}" text="{tab2name}" />
-			<drawtext condition="{istab3active}" x="0%" y="50%" width="100%" font="{light}" fontsize="45%" color="{clrLightGray}" text="{tab3name}" />
-			<drawimage condition="{hasbanner}" imagetype="image" path="{banner}" x="50%" y="5%" width="50%" height="90%" />
+	
+	<!-- Tokens available for scrollbar
+		{height}	height of the position marker of the scrollbar in percent
+		{offset}	offset for the position marker from the top of the scrollbar in percent
+	-->
+	<viewelement name="scrollbar">
+	<!-- example:
+		<area x="66%" y="15%" width="9%" height="75%" layer="4">
+			<drawrectangle x="0" y="2" width="{areawidth}-2" height="{areaheight}" color="{clrRed}" />
+			<drawrectangle x="0" y="{areaheight} / 100 * {offset}" width="{areawidth}" height="{areaheight} / 100 * {height}" color="{clrGreen}" />
 		</area>
+	-->
 	</viewelement>
+	
+	<!--
+	Same tokens as in grids from root-view
+	but element are usually from type "clip" so the available information are the following:
+	
+	{title}                 	string, Name of the element
+	{extraType}								int, 1 = trailer, 5 = Behind the Scenes(?)
+	{duration}			int, minutes, total duration
+	{originallyAvailableYear}		Year of release/first aired
+	{originallyAvailableMonth}	Month of release/first aired
+	{originallyAvailableDay}		Day of release/first aired
+	-->
+  <!--<grid name="extragrid">  
+	</grid>-->
+	
 
-	<viewelement name="footer">
-		<area  x="43%" y="92%" width="13%" height="5%" layer="3">
+	
+	<!-- Available Variables Footer:
+    {red1}                    true if red button is button 1
+    {red2}                    true if red button is button 2
+    {red3}                    true if red button is button 3
+    {red4}                    true if red button is button 4
+    {green1}                  true if green button is button 1
+    {green2}                  true if green button is button 2
+    {green3}                  true if green button is button 3
+    {green4}                  true if green button is button 4
+    {yellow1}                 true if yellow button is button 1
+    {yellow2}                 true if yellow button is button 2
+    {yellow3}                 true if yellow button is button 3
+    {yellow4}                 true if yellow button is button 4
+    {blue1}                   true if blue button is button 1
+    {blue2}                   true if blue button is button 2
+    {blue3}                   true if blue button is button 3
+    {blue4}                   true if blue button is button 4
+    {red}                     label of red button
+    {green}                   label of green button
+    {yellow}                  label of yellow button
+    {blue}                    label of blue button
+    -->
+    <viewelement name="footer">
+		<area  x="43%" y="92%" width="13%" height="5%" layer="7">
 			<drawimage x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlancMain" />
 			<drawtext condition="{red1}" x="0" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{red}" />
 			<drawimage  condition="{red1}++isset{red}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonRedMain" />
@@ -38,7 +181,7 @@
 			<drawtext condition="{blue1}" x="0" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{blue}" />
 			<drawimage  condition="{blue1}++isset{blue}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlueMain" />           
 		</area>
-		<area x="56%" y="92%" width="13%" height="5%" layer="3">
+		<area x="56%" y="92%" width="13%" height="5%" layer="7">
 			<drawimage x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlancMain" />
 			<drawtext condition="{red2}" x="0" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{red}" />
 			<drawimage  condition="{red2}++isset{red}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonRedMain" />           
@@ -49,7 +192,7 @@
 			<drawtext condition="{blue2}" x="0" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{blue}" />
 			<drawimage  condition="{blue2}++isset{blue}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlueMain" />
 		</area>
-		<area x="69%" y="92%" width="13%" height="5%" layer="3">
+		<area x="69%" y="92%" width="13%" height="5%" layer="7">
 			<drawimage x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlancMain" />
 			<drawtext condition="{red3}" x="0" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{red}" />
 			<drawimage  condition="{red3}++isset{red}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonRedMain" />
@@ -60,7 +203,7 @@
 			<drawtext condition="{blue3}" x="0" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{blue}" />
 			<drawimage  condition="{blue3}++isset{blue}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlueMain" />
 		</area>
-		<area x="82%" y="92%" width="13%" height="5%" layer="3">
+		<area x="82%" y="92%" width="13%" height="5%" layer="7">
 			<drawimage x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlancMain" />
 			<drawtext condition="{red4}" x="20" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{red}" />
 			<drawimage  condition="{red4}++isset{red}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonRedMain" />           
@@ -71,6 +214,6 @@
 			<drawtext condition="{blue4}" x="0" y="{areaheight}*0.07" align="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{blue}" />
 			<drawimage  condition="{blue4}++isset{blue}" x="0" y="93%" width="{areawidth}" height="{areaheight}/9" imagetype="skinpart" path="buttonBlueMain" />            
 		</area>
-	</viewelement>
-
+    </viewelement>
+	
 </displayplugin>
