@@ -1,6 +1,9 @@
 shady-skin Revision History
 ----------------------------------
 
+2016-03-11:
+- First steps with plug-plex-detail
+
 2016-03-06:
 - Fixed bug in translation of setup-parameters
 
